# aqueduct

./: .gitignore  Anchor.toml  package.json
app/: .eslintrc.json  .gitignore  .npmrc  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
app/infrastructure/: package.json
app/infrastructure/lib/: lambdaStack.ts  sqsClient.ts
app/prisma/: schema.prisma
app/prisma/migrations/20230211005304_init/: migration.sql
app/prisma/migrations/20230211160309_inner_swap/: migration.sql
app/prisma/migrations/20230211195504_amount_to_float/: migration.sql
app/src/: AqueductClient.ts
app/src/idl/: aqueduct.json  aqueduct.ts  program_id.json
app/src/infrastructure/: analysis.ts  constants.ts  database.ts  helius.ts  jupiter.ts  lambda.ts  openbook.ts  utils.ts  whirlpool.ts
app/src/rpc/: closePosition.ts  createUser.ts  data.ts  deleteUser.ts  deposit.ts  openPosition.ts  saveUserSettings.ts  swapToUSDC.ts  withdrawRewards.ts  withdrawUSDC.ts
app/src/utils/: clients.ts  compute.ts  filters.ts  math.ts  misc.ts  navigation.ts  pda.ts  tokens.ts
programs/aqueduct/: Cargo.toml
programs/aqueduct/src/: lib.rs
programs/aqueduct/src/instructions/: add_pool_config.rs  funds_deposit.rs  funds_withdraw.rs  init_ata.rs  mod.rs  position_close.rs  position_fund.rs  position_open.rs  position_swap.rs  user_create.rs  user_delete.rs  user_settings.rs
programs/aqueduct/src/integrations/: mango_markets_v3.rs  mod.rs
programs/aqueduct/src/state/: mod.rs  pool_config.rs  user.rs
tests/: handlers.ts
(+9 files in other folders)
